[package]
name = "tweeps"
version = "0.1.0"
authors = ["Jon Barker <jon.barker@samsungnext.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = { version = "0.13", features = ["hyper-rustls"], default-features = false }
tokio-core = "0.1.17"
tokio = "0.1.22"
